--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Erica-jihyeon/BootcampX#readme",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "pg": "^8.7.1"
   }
 }
